build/readiness-app/objects/InContact_Reports__mdt.object
<CustomObject>
    <description>This is list of various reports that are used for Einstein App.</description>
    <label>InContact Report</label>
    <pluralLabel>InContact Reports</pluralLabel>
    <fields>
        <fullName>Dataset_Name__c</fullName>
        <description>Dataset Name</description>
        <inlineHelpText>Dataset Name</inlineHelpText>
        <label>Dataset Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fields__c</fullName>
        <label>fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MetaData_Json__c</fullName>
        <label>MetaData Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Http Method</description>
        <inlineHelpText>Http Method</inlineHelpText>
        <label>HTTP Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <description>ReportId</description>
        <inlineHelpText>ReportId</inlineHelpText>
        <label>ReportId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_URL__c</fullName>
        <description>Report URL</description>
        <inlineHelpText>Report URL</inlineHelpText>
        <label>Report URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>